--- a/proResponse/src/component/ExpertRegister/expertRegister.css
+++ b/proResponse/src/component/ExpertRegister/expertRegister.css
@@ -1,4 +1,4 @@
-/* expertRegister.css (원하면 연결) */
+/* expertRegister.css */
 .expert-main {
   background: #f4f5f7;
   min-height: calc(100vh - 0px);
